feat: 文件上传下载 + OAF 部署包自动生成（发布助手按描述生成 zip 并交付/上传）
文件上传下载（agent-framework + backend + frontend）：
- FileStorage 双后端（local/S3, MinIO 8.5.17）+ file_asset 元数据表（Dify UploadFile 模式）
- FileController 上传（MIME 白名单/大小/pending 限额）/下载端点；业务 Pod 单卷双 mount（/config 只读 subPath + /data/files 可写）
- 上传注入三兜底：create/resume 后 + SandboxUserKeyMiddleware.onAgent + doExec；非沙箱直接写本地工作区
- present_file 工具：沙箱模式 file_path 直读（execd files API，userKey 校验防串沙箱），base64 兜底
- SSE file_ready 合成帧（TextDelta 累积二次解析）→ 前端附件上传/下载卡片/图片内联
- SessionCleanupService 文件资产过期清理；isTrailingSandboxTeardownError 吞掉 SDK 尾部收尾错误

OAF 部署包自动生成（release-agent）：
- check_oaf_package（frontmatter 7 必填 + kebab-case + semver，与平台校验对齐）
- create_oaf_zip（JVM 侧打包登记，返回 file_id + content_base64 供 upload_package）
- maxIters(20)；AGENTS.md 新增生成流程指引（强制校验、禁沙箱写文件、发布前询问用户）

E2E（e2e/）：
- file-support-e2e.sh：非沙箱 21 断言 / 沙箱 29 断言（S-S8 生成包、S-S9 发布全链路）
- file-support-ui-e2e.js：12 用例（U1~U10 文件对话 + U11~U13 生成包卡片/zip 魔数/平台校验）
- fixtures/demo.docx；运行时临时 fixture 入 gitignore

文档：file-upload-download-plan.md（设计 §1~18 + 实施偏差）、REDESIGN.md B.6、e2e/AGENTS.md